[package]
name = "ctty"
version = "0.1.0"
authors = ["Shawn Anastasio <shawnanastasio@yahoo.com>"]
build = "build.rs"
license = "MIT"
description = "Cross-platform crate for determining a process' controlling tty (ctty)"
repository = "https://github.com/shawnanastasio/ctty-rs"

[dependencies]
thiserror = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
glob = "0.3"
nix = "0.19"

[target.'cfg(any(target_os = "freebsd", target_os = "macos"))'.build-dependencies]
cc = "1.0"

[target.'cfg(any(target_os = "freebsd", target_os = "macos"))'.dependencies]
libc = "0.2"

